--- a/LoggingProxyExample/LoggingProxyExample.csproj
+++ b/LoggingProxyExample/LoggingProxyExample.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CommandFactory.cs" />
     <Compile Include="CommandInterceptor.cs" />
     <Compile Include="ICommand.cs" />
+    <Compile Include="LoggingIntercepter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
