--- a/LoggingProxyExample/packages.config
+++ b/LoggingProxyExample/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net452" />
 </packages>
